# choral-forma

./: .editorconfig  .forma.md  .forma.yml  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  Cargo.toml  README.md  eslint.config.mjs  install.ps1  install.sh  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prettier.config.mjs  skills-lock.json
.agents/skills/: forma-cli
.forma/: .gitignore  dashboard.md
.forma/spaces/: architecture.md  concepts.md  decisions.md  design.md  discovery.md  experiments.md  guidelines.md  index.md  knowledge.md  members.md  metrics.md  planning.md  product.md  proposals.md  releases.md  tasks.md  test-cases.md  user-stories.md  workspace-support.md  workspace.md
.forma/views/: knowledge-graph.md  task-board.md  workspace-graph.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: alpha_feedback.yml  bug_report.yml  installation_problem.yml
.github/workflows/: ci.yml  release.yml
.zed/: debug.json  settings.json
crates/forma-cli/: Cargo.toml  build.rs
crates/forma-cli/src/: lib.rs  main.rs
crates/forma-cli/tests/: cli.rs
crates/forma-core/: Cargo.toml
crates/forma-core/assets/skills/: forma-cli-core.md
crates/forma-core/src/: config.rs  diagnostics.rs  docs.rs  index.rs  lib.rs  markdown.rs  operations.rs  path.rs  render.rs  schema.rs
crates/forma-rpc/: Cargo.toml
crates/forma-rpc/src/: lib.rs
docs/: getting-started.md  index.md
docs/agents/: forma-cli-core.md  knowledge-maintenance.md  workspace-bootstrap.md  workspace-design-discovery.md  workspace-example-accelerator.md  workspace-maintenance.md
docs/cli/: check.md  config.md  init.md  serve.md  skills.md  view.md
docs/workspace/: configuration.md  guidelines.md  (+5 more)
knowledge/: README.md
(+487 files in other folders)
