[package]
name = "forma-cli"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "forma"
path = "src/main.rs"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
forma-core = { path = "../forma-core" }
forma-rpc = { path = "../forma-rpc" }
serde_yml = "0.0.12"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
tower = "0.5.3"
