[package]
name = "forma-rpc"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
forma-core = { path = "../forma-core" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
thiserror = "2.0.18"

[lib]
path = "src/lib.rs"
